tests/pos/todo/simple/glob-11.ts

/*@ global a :: # */
var a = 1; 
a = 2; 
a = 3; 
assert(a > 0) ;

