tests/neg/todo/simple/glob-11.ts

/*@ global a :: # */
var a = 1; 
a = 0; 
a = 3; 
assert(a > 0) ;

